Добавляет базовую стилизацию

--- a/hotels.html
+++ b/hotels.html
@@ -4,6 +4,7 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="css/style.css">
         <title>HTML Academy: гостиницы Седоны</title>
     </head>
 
@@ -15,8 +16,7 @@
                 </a>
                 <ul class="navigation-main">
                     <li class="navigation-main-item">
-                        <a href="index.html" class="navigation-main-link"
-                            aria-current="page">Главная</a>
+                        <a href="index.html" class="navigation-main-link" aria-current="page">Главная</a>
                     </li>
                     <li class="navigation-main-item">
                         <a href="#" class="navigation-main-link">О Седоне</a>
@@ -41,75 +41,78 @@
             </nav>
         </header>
         <main class="main-inner">
-            <header class="inner-header">
-                <h1>Гостиницы Седоны</h1>
-                <ul class="breadcrumbs-list">
-                    <li class="breadcrumbs-item">
-                        <a href="index.html" class="breadcrumbs-link">
-                            <span class="visually-hidden">Главная</span>
-                        </a>
-                    </li>
-                    <li class="breadcrumbs-item">
-                        <a class="breadcrumbs-link">Гостиницы</a>
-                    </li>
-                </ul>
-            </header>
-            <section class="hotels-filter">
-                <h2 class="visually-hidden">Список гостиниц с фильтрами</h2>
-                <form action="#" class="hotels-filter-form" method="get">
-                    <fieldset class="hotels-filter-group">
-                        <legend class="control">Инфраструктура:</legend>
-                        <label for="hotels-pool">
-                            <input id="hotels-pool" class="control-input" type="checkbox" name="hotels-pool" checked>
-                            Бассейн
-                        </label>
-                        <label for="hotels-parking">
-                            <input id="hotels-parking" class="control-input" type="checkbox" name="hotels-parking"
-                                checked>
-                            Парковка
-                        </label>
-                        <label for="wifi">
-                            <input id="wifi" class="control-input" type="checkbox" name="hotels-wifi">
-                            Wi-Fi
-                        </label>
-                    </fieldset>
-                    <fieldset class="hotels-filter-group">
-                        <legend class="control">Тип жилья:</legend>
-                        <label>
-                            <input class="control-input" type="radio" name="housing-type" checked>
-                            Гостиница
-                        </label>
-                        <label>
-                            <input class="control-input" type="radio" name="housing-type">
-                            Мотель
-                        </label>
-                        <label>
-                            <input class="control-input" type="radio" name="housing-type">
-                            Апартаменты
-                        </label>
-                    </fieldset>
-                    <fieldset class="hotels-filter-group">
-                        <legend class="control">Стоимость, ₽:</legend>
-                        <label for="input-from">
-                            От
-                            <input id="input-from" class="text-input" type="number" name="costs-from" value="0">
-                        </label>
-                        <label for="input-to">
-                            До
-                            <input id="input-to" class="text-input" type="number" name="costs-to" value="9000">
-                        </label>
-                        <input type="range" name="costs-range">
-                        <button class="button button-submit" type="submit">Применить</button>
-                        <button class="button button-reset" type="reset">Сбросить</button>
-                    </fieldset>
-                </form>
-            </section>
+            <div class="wrapper">
+                <header class="inner-header">
+                    <h1>Гостиницы Седоны</h1>
+                    <ul class="breadcrumbs-list">
+                        <li class="breadcrumbs-item">
+                            <a href="index.html" class="breadcrumbs-link">
+                                <span class="visually-hidden">Главная</span>
+                            </a>
+                        </li>
+                        <li class="breadcrumbs-item">
+                            <a class="breadcrumbs-link">Гостиницы</a>
+                        </li>
+                    </ul>
+                </header>
+                <section class="hotels-filter">
+                    <h2 class="visually-hidden">Список гостиниц с фильтрами</h2>
+                    <form action="#" class="hotels-filter-form" method="get">
+                        <fieldset class="hotels-filter-group">
+                            <legend class="control">Инфраструктура:</legend>
+                            <label class="filter-label" for="hotels-pool">
+                                <input id="hotels-pool" class="control-input" type="checkbox" name="hotels-pool"
+                                    checked>
+                                Бассейн
+                            </label>
+                            <label class="filter-label" for="hotels-parking">
+                                <input id="hotels-parking" class="control-input" type="checkbox" name="hotels-parking"
+                                    checked>
+                                Парковка
+                            </label>
+                            <label class="filter-label" for="wifi">
+                                <input id="wifi" class="control-input" type="checkbox" name="hotels-wifi">
+                                Wi-Fi
+                            </label>
+                        </fieldset>
+                        <fieldset class="hotels-filter-group">
+                            <legend class="control">Тип Жилья:</legend>
+                            <label class="filter-label">
+                                <input class="control-input" type="radio" name="housing-type" checked>
+                                Гостиница
+                            </label>
+                            <label class="filter-label">
+                                <input class="control-input" type="radio" name="housing-type">
+                                Мотель
+                            </label>
+                            <label class="filter-label">
+                                <input class="control-input" type="radio" name="housing-type">
+                                Апартаменты
+                            </label>
+                        </fieldset>
+                        <fieldset class="hotels-filter-group">
+                            <legend class="control">Стоимость, ₽:</legend>
+                            <label class="costs-label" for="input-from">
+                                От
+                                <input id="input-from" class="text-input" type="number" name="costs-from" value="0">
+                            </label>
+                            <label class="costs-label" for="input-to">
+                                До
+                                <input id="input-to" class="text-input" type="number" name="costs-to" value="9000">
+                            </label>
+                            <input type="range" name="costs-range">
+                            <button class="button button-blue" type="submit">Применить</button>
+                            <button class="button" type="reset">Сбросить</button>
+                        </fieldset>
+                    </form>
+                </section>
+            </div>
             <section class="hotels-list">
-                <h2>Найдено гостиниц:<span class="number-hotels">38</span></h2>
+                <h2>Найдено гостиниц: <span class="number-hotels">38</span></h2>
                 <select class="select-control" aria-label="Сортировка">
-                    <option value="cheap">Сначала дешевые</option>
-                    <option value="popular">Сначала популярные</option>
-                    <option value="expensive">Сначала дорогие</option>
+                    <option class="select-control-option" value="cheap">Сначала дешевые</option>
+                    <option class="select-control-option" value="popular">Сначала популярные</option>
+                    <option class="select-control-option" value="expensive">Сначала дорогие</option>
                 </select>
                 <ul class="view-buttons">
                     <li class="view-buttons-list">
@@ -130,7 +133,7 @@
                 </ul>
                 <ul class="hotels-list">
                     <li class="hotels-item">
-                        <a href="#" aria-label="Гостиница Amara Resort & Spa">
+                        <a class="hotel-title" href="#" aria-label="Гостиница Amara Resort & Spa">
                             <h3>Amara Resort & Spa</h3>
                         </a>
                         <a href="#" tabindex="-1">
@@ -139,15 +142,15 @@
                         </a>
                         <span>Гостиница</span>
                         <b class="hotel-costs">От 4000 ₽</b>
-                        <a href="#">Подробнее</a>
-                        <button class="button button-to-favorites" type="button">в избранное</button>
+                        <a class="hotels-more" href="#">Подробнее</a>
+                        <button class="button button-blue button-to-favorites" type="button">В избранное</button>
                         <div class="stars four-stars">
                             <span class="visually-hidden">4 звезды</span>
                         </div>
-                        <p class="hotel-rating">Рейтинг:<span>8,5</span></p>
+                        <p class="hotel-rating">Рейтинг: <span>8,5</span></p>
                     </li>
                     <li class="hotels-item">
-                        <a href="#" aria-label="Гостиница Villas at Poco Diablo">
+                        <a class="hotel-title" href="#" aria-label="Гостиница Villas at Poco Diablo">
                             <h3>Villas at Poco Diablo</h3>
                         </a>
                         <a href="#" tabindex="-1">
@@ -156,15 +159,15 @@
                         </a>
                         <span>Гостиница</span>
                         <b class="hotel-costs">От 5000 ₽</b>
-                        <a href="#">Подробнее</a>
-                        <button class="button button-in-favorites" type="button">в избранное</button>
+                        <a class="hotels-more" href="#">Подробнее</a>
+                        <button class="button button-in-favorites" type="button">В избранном</button>
                         <div class="stars four-stars">
                             <span class="visually-hidden">4 звезды</span>
                         </div>
-                        <p class="hotel-rating">Рейтинг:<span>9,2</span></p>
+                        <p class="hotel-rating">Рейтинг: <span>9,2</span></p>
                     </li>
                     <li class="hotels-item">
-                        <a href="#" aria-label="Гостиница Villas at Poco Diablo">
+                        <a class="hotel-title" href="#" aria-label="Гостиница Villas at Poco Diablo">
                             <h3>Desert Quail Inn</h3>
                         </a>
                         <a href="#" tabindex="-1">
@@ -173,15 +176,15 @@
                         </a>
                         <span>Гостиница</span>
                         <b class="hotel-costs">От 2500 ₽</b>
-                        <a href="#">Подробнее</a>
-                        <button class="button button-to-favorites" type="button">в избранное</button>
+                        <a class="hotels-more" href="#">Подробнее</a>
+                        <button class="button button-blue button-to-favorites" type="button">В избранное</button>
                         <div class="stars three-stars">
                             <span class="visually-hidden">3 звезды</span>
                         </div>
-                        <p class="hotel-rating">Рейтинг:<span>6,9</span></p>
+                        <p class="hotel-rating">Рейтинг: <span>6,9</span></p>
                     </li>
                     <li class="hotels-item">
-                        <a href="#">
+                        <a class="hotel-title" href="#">
                             <h3 aria-label="Гостиница GreenTree Inn">GreenTree Inn</h3>
                         </a>
                         <a href="#" tabindex="-1">
@@ -190,12 +193,12 @@
                         </a>
                         <span>Гостиница</span>
                         <b class="hotel-costs">От 1500 ₽</b>
-                        <a href="#">Подробнее</a>
-                        <button class="button button-to-favorites" type="button">в избранное</button>
+                        <a class="hotels-more" href="#">Подробнее</a>
+                        <button class="button button-blue button-to-favorites" type="button">В избранное</button>
                         <div class="stars two-stars">
                             <span class="visually-hidden">2 звезды</span>
                         </div>
-                        <p class="hotel-rating">Рейтинг:<span>5,0</span></p>
+                        <p class="hotel-rating">Рейтинг: <span>5,0</span></p>
                     </li>
                 </ul>
                 <ul class="pagination">
@@ -221,10 +224,12 @@
             </section>
             <section class="subscribe-hotels">
                 <h2>Подпишитесь на рассылку</h2>
-                <p>Только полезная информация и никакого спама, честное бойскаутское!</p>
+                <p class="subscribe-hotels-subscription">Только полезная информация и никакого спама, честное
+                    бойскаутское!</p>
                 <form action="https://echo.htmlacademy.ru/" class="subscribe-hotels-table" method="post">
-                    <input type="email" name="email" placeholder="Ваш e-mail">
-                    <button class="button" type="submit">Подписаться</button>
+                    <label class="visually-hidden" for="e-mail">Укажите ваш e-mail</label>
+                    <input id="e-mail" type="email" name="email" placeholder="Ваш e-mail">
+                    <button class="button button-blue button-subscribe" type="submit">Подписаться</button>
                 </form>
             </section>
         </main>
