--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
 
     <head>
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <link rel="stylesheet" href="css/style.css">
         <title>HTML Academy: Седона</title>
     </head>
 
@@ -34,7 +36,7 @@
                         <button class="button-favorite" type="button">Избранное</button>
                     </li>
                     <li class="navigation-user-item">
-                        <a class="want-there" href="#">Хочу сюда</a>
+                        <a class="want-there" href="#">Хочу сюда!</a>
                     </li>
                 </ul>
             </nav>
@@ -47,8 +49,8 @@
             </section>
             <section class="gallery">
                 <h2 class="visually-hidden">Галлерея</h2>
-                <p>Седона — небольшой городок в Аризоне, заслуживающий большего!</p>
-                <p>Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
+                <p class="gallery-title">Седона — небольшой городок в Аризоне, заслуживающий большего!</p>
+                <p class="gallery-subscription">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
                 <ul class="gallery-list">
                     <li class="gallery-item">
                         <h3>Настоящий городок</h3>
@@ -76,7 +78,7 @@
             </section>
             <section class="advantages">
                 <h2>Приезжайте в Седону отдохнуть в комфорте и уюте!</h2>
-                <p>Опытный персонал и качественное обслуживание!</p>
+                <p class="advantages-subscription">Опытный персонал и качественное обслуживание!</p>
                 <ul class="advantages-list">
                     <li class="advantages-item">
                         <h3>Жильё</h3>
@@ -94,17 +96,17 @@
             </section>
             <section class="appointment">
                 <h2 class="visually-hidden">Поиск гостиницы</h2>
-                <p>Заинтересовались?</p>
-                <p>Укажите предполагаемые даты поездки,и мы покажем вам лучшие предложения гостиниц в Седоне</p>
+                <p class="appointment-title">Заинтересовались?</p>
+                <p class="appointment-subscription">Укажите предполагаемые даты поездки,и мы покажем вам лучшие предложения гостиниц в Седоне</p>
                 <a href="hotels.html">Поиск гостиницы в Седоне</a>
             </section>
             <section class="subscribe-index">
                 <h2>Подпишитесь на рассылку</h2>
-                <p>Только полезная информация и никакого спама, честное бойскаутское!</p>
+                <p class="subscribe-index-subscription">Только полезная информация и никакого спама, честное бойскаутское!</p>
                 <form action="https://echo.htmlacademy.ru/" class="subscribe-index-table" method="post">
                     <label class="visually-hidden" for="e-mail">Укажите ваш e-mail</label>
                     <input id="e-mail" type="email" name="email" placeholder="Ваш e-mail">
-                    <button class="button" type="submit">Подписаться</button>
+                    <button class="button button-blue button-subscribe" type="submit">Подписаться</button>
                 </form>
             </section>
         </main>
