Доработана базовая стилизация

--- a/hotels.html
+++ b/hotels.html
@@ -35,7 +35,7 @@
                         <button class="button-favorite" type="button">Избранное</button>
                     </li>
                     <li class="navigation-user-item">
-                        <a class="want-there" href="#">Хочу сюда</a>
+                        <a class="want-here" href="#">Хочу сюда</a>
                     </li>
                 </ul>
             </nav>
