--- a/index.html
+++ b/index.html
@@ -9,134 +9,142 @@
   </head>
 
   <body>
-    <header class="page-header">
-      <nav class="navigation">
-        <a class="page-header-logo" href="index.html" aria-current="page">
-          <img src="images/header/logo.svg" alt="Седона - городок в Аризоне" width="140" height="70">
-        </a>
-        <ul class="navigation-main">
-          <li class="navigation-main-item">
-            <a href="index.html" class="navigation-main-link navigation-main-link-current"
-              aria-current="page">Главная</a>
-          </li>
-          <li class="navigation-main-item">
-            <a href="#" class="navigation-main-link">О Седоне</a>
-          </li>
-          <li class="navigation-main-item">
-            <a href="hotels.html" class="navigation-main-link">Гостиницы</a>
-          </li>
-        </ul>
-        <ul class="navigation-user">
-          <li class="navigation-user-item">
-            <button class="button-search" type="button">
-              <span class="visually-hidden">Поиск по сайту</span>
-            </button>
-          </li>
-          <li class="navigation-user-item">
-            <button class="button-favorite" type="button">Избранное</button>
-          </li>
-          <li class="navigation-user-item">
-            <a class="want-here" href="#">Хочу сюда!</a>
-          </li>
-        </ul>
-      </nav>
-    </header>
-    <main class="main-index">
-      <section class="hero">
-        <h1 class="visually-hidden">Седона - городок в Аризоне</h1>
-        <img class="hero-image-main" src="images/welcome-sedona.svg" width="458" height="352"
-          alt="Добро пожаловать в великолепную Седону">
-      </section>
-      <section class="gallery">
-        <h2 class="visually-hidden">Галлерея</h2>
-        <p class="gallery-title">Седона — небольшой городок в Аризоне, заслуживающий большего!</p>
-        <p class="gallery-subscription">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
-        <ul class="gallery-list">
-          <li class="gallery-item">
-            <h3>Настоящий городок</h3>
-            <p>Седона — не аттракцион для туристов, там течёт своя жизнь</p>
-            <img src="images/gallery-1.jpg" width="800" height="385" alt="Седона - настоящий город">
-          </li>
-          <li class="gallery-item">
-            <h3>Небольшая площадь</h3>
-            <p>Все достопримечательности находятся очень близко</p>
-          </li>
-          <li class="gallery-item">
-            <h3>Красивая дорога</h3>
-            <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
-          </li>
-          <li class="gallery-item">
-            <h3>Мало туристов</h3>
-            <p>Большинство едет в Гранд Каньон и толпится там</p>
-          </li>
-          <li class="gallery-item">
-            <h3>Там есть мост дьявола</h3>
-            <p>Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
-            <img src="images/gallery-2.jpg" width="800" height="385" alt="Седона: мост дьявола">
-          </li>
-        </ul>
-      </section>
-      <section class="advantages">
-        <h2>Приезжайте в Седону отдохнуть в комфорте и уюте!</h2>
-        <p class="advantages-subscription">Опытный персонал и качественное обслуживание!</p>
-        <ul class="advantages-list">
-          <li class="advantages-item">
-            <h3>Жильё</h3>
-            <p>Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
-          </li>
-          <li class="advantages-item">
-            <h3>Еда</h3>
-            <p>Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
-          </li>
-          <li class="advantages-item">
-            <h3>Сувениры</h3>
-            <p>Не только китайского, но и настоящего местного производства!</p>
-          </li>
-        </ul>
-      </section>
-      <section class="appointment">
-        <h2 class="visually-hidden">Поиск гостиницы</h2>
-        <p class="appointment-title">Заинтересовались?</p>
-        <p class="appointment-subscription">Укажите предполагаемые даты поездки,и мы покажем вам лучшие предложения
-          гостиниц в Седоне</p>
-        <a href="hotels.html">Поиск гостиницы в Седоне</a>
-      </section>
-      <section class="subscribe-index">
-        <h2>Подпишитесь на рассылку</h2>
-        <p class="subscribe-index-subscription">Только полезная информация и никакого спама, честное бойскаутское!</p>
-        <form action="https://echo.htmlacademy.ru/" class="subscribe-index-table" method="post">
-          <label class="visually-hidden" for="e-mail">Укажите ваш e-mail</label>
-          <input id="e-mail" type="email" name="email" placeholder="Ваш e-mail">
-          <button class="button button-blue button-subscribe" type="submit">Подписаться</button>
-        </form>
-      </section>
-    </main>
-    <footer class="page-footer">
-      <section>
-        <h2 class="visually-hidden">Список социальных сетей</h2>
-        <ul class="social-list">
-          <li class="social-item">
-            <a href="https://vk.com/htmlacademy">
-              <span class="visually-hidden">Вконтакте</span>
+    <div class="page-wrapper">
+      <header class="page-header">
+        <nav class="navigation">
+          <a class="page-header-logo" href="index.html" aria-current="page">
+            <img src="images/header/logo.svg" alt="Седона - городок в Аризоне" width="140" height="70">
+          </a>
+            <ul class="navigation-main navigation-menu">
+              <li class="navigation-main-item">
+                <a href="index.html" class="navigation-main-link navigation-main-link-current"
+                  aria-current="page">Главная</a>
+              </li>
+              <li class="navigation-main-item">
+                <a href="#" class="navigation-main-link">О Седоне</a>
+              </li>
+              <li class="navigation-main-item">
+                <a href="hotels.html" class="navigation-main-link">Гостиницы</a>
+              </li>
+            </ul>
+            <ul class="navigation-main navigation-user">
+              <li class="navigation-user-item">
+                <button class="button-search" type="button">
+                  <span class="visually-hidden">Поиск по сайту</span>
+                </button>
+              </li>
+              <li class="navigation-user-item">
+                <button class="button-favorite" type="button">Избранное</button>
+              </li>
+              <li class="navigation-user-item">
+                <a class="want-here" href="#">Хочу сюда!</a>
+              </li>
+            </ul>
+        </nav>
+      </header>
+      <main class=" main-container main-index">
+        <section class="hero">
+          <h1 class="visually-hidden" hidden>Седона - городок в Аризоне</h1>
+          <img class="hero-image-main" src="images/welcome-sedona.svg" width="458" height="352"
+            alt="Добро пожаловать в великолепную Седону">
+        </section>
+        <section class="gallery">
+          <h2 class="visually-hidden">Галлерея</h2>
+          <p class="gallery-title">Седона — небольшой городок в Аризоне, заслуживающий большего!</p>
+          <p class="gallery-subscription">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
+          <ul class="gallery-list">
+            <li class="gallery-item">
+              <h3>Настоящий городок</h3>
+              <p>Седона — не аттракцион для туристов, там течёт своя жизнь</p>
+              <img src="images/gallery-1.jpg" width="800" height="385" alt="Седона - настоящий город">
+            </li>
+            <li class="gallery-item">
+              <h3>Небольшая площадь</h3>
+              <p>Все достопримечательности находятся очень близко</p>
+            </li>
+            <li class="gallery-item">
+              <h3>Красивая дорога</h3>
+              <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
+            </li>
+            <li class="gallery-item">
+              <h3>Мало туристов</h3>
+              <p>Большинство едет в Гранд Каньон и толпится там</p>
+            </li>
+            <li class="gallery-item">
+              <h3>Там есть мост дьявола</h3>
+              <p>Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
+              <img src="images/gallery-2.jpg" width="800" height="385" alt="Седона: мост дьявола">
+            </li>
+          </ul>
+        </section>
+        <section class="advantages">
+          <h2>Приезжайте в Седону отдохнуть в комфорте и уюте!</h2>
+          <p class="advantages-subscription">Опытный персонал и качественное обслуживание!</p>
+          <ul class="advantages-list">
+            <li class="advantages-item">
+              <h3>Жильё</h3>
+              <p>Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+            </li>
+            <li class="advantages-item">
+              <h3>Еда</h3>
+              <p>Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
+            </li>
+            <li class="advantages-item">
+              <h3>Сувениры</h3>
+              <p>Не только китайского, но и настоящего местного производства!</p>
+            </li>
+          </ul>
+        </section>
+        <section class="appointment">
+          <h2 class="visually-hidden">Поиск гостиницы</h2>
+          <p class="appointment-title">Заинтересовались?</p>
+          <p class="appointment-subscription">Укажите предполагаемые даты поездки,и мы покажем вам лучшие предложения
+            гостиниц в Седоне</p>
+          <a href="hotels.html">Поиск гостиницы в Седоне</a>
+        </section>
+        <section class="subscribe-index">
+          <h2>Подпишитесь на рассылку</h2>
+          <p class="subscribe-index-subscription">Только полезная информация и никакого спама, честное бойскаутское!</p>
+          <form action="https://echo.htmlacademy.ru/" class="subscribe-table" method="post">
+            <label class="visually-hidden" for="e-mail">Укажите ваш e-mail</label>
+            <input id="e-mail" type="email" name="email" placeholder="Ваш e-mail">
+            <button class="button button-blue button-subscribe" type="submit">Подписаться</button>
+          </form>
+        </section>
+      </main>
+      <footer class="page-footer">
+        <div class="footer-wrapper">
+          <section class="socials">
+            <h2 class="visually-hidden" hidden>Список социальных сетей</h2>
+            <ul class="social-list">
+              <li class="social-item">
+                <a href="https://vk.com/htmlacademy">
+                  <span class="visually-hidden">Вконтакте</span>
+                </a>
+              </li>
+              <li class="social-item">
+                <a href="https://t.me/htmlacademy">
+                  <span class="visually-hidden">Телеграм</span>
+                </a>
+              </li>
+              <li class="social-item">
+                <a href="https://www.youtube.com/user/htmlacademyru">
+                  <span class="visually-hidden">Ютуб</span>
+                </a>
+              </li>
+            </ul>
+          </section>
+          <section class="phone">
+            <a href="tel:+78128121212" class="phone-link" aria-label="Номер телефона для связи">+7 (812) 812-12-12</a>
+          </section>
+          <section class="academy-logo">
+            <a href="https://htmlacademy.ru/" class="academy-link">
+              <img class="academy-logo" src="images/html-academy.svg" width="115" height="33" alt="Логотип Html academy">
             </a>
-          </li>
-          <li class="social-item">
-            <a href="https://t.me/htmlacademy">
-              <span class="visually-hidden">Телеграм</span>
-            </a>
-          </li>
-          <li class="social-item">
-            <a href="https://www.youtube.com/user/htmlacademyru">
-              <span class="visually-hidden">Ютуб</span>
-            </a>
-          </li>
-        </ul>
-      </section>
-      <a href="tel:+78128121212" class="phone" aria-label="Номер телефона для связи">+7 (812) 812-12-12</a>
-      <a href="https://htmlacademy.ru/" class="academy-link">
-        <img class="academy-logo" src="images/html-academy.svg" width="115" height="33" alt="Логотип Html academy">
-      </a>
-    </footer>
+          </section>
+        </div>
+      </footer>
+    </div>
   </body>
-
 </html>
+
