--- a/hotels.html
+++ b/hotels.html
@@ -12,8 +12,8 @@
       <div class="page-wrapper">
         <header class="page-header">
           <nav class="navigation">
-            <a class="page-header-logo" href="index.html" aria-current="page">
-              <img src="images/header/logo.svg" alt="Седона - городок в Аризоне" width="140" height="70">
+            <a class="header-logo-link" href="index.html" aria-current="page">
+              <img class="header-logo" src="images/header/logo.svg" alt="Седона - городок в Аризоне" width="140" height="70">
             </a>
               <ul class="navigation-main navigation-menu">
                 <li class="navigation-main-item">
@@ -29,9 +29,7 @@
               </ul>
               <ul class="navigation-main navigation-user">
                 <li class="navigation-user-item">
-                  <button class="button-search" type="button">
-                    <span class="visually-hidden">Поиск по сайту</span>
-                  </button>
+                  <button class="button-search" type="button">Поиск по сайту</button>
                 </li>
                 <li class="navigation-user-item">
                   <button class="button-favorite" type="button">Избранное</button>
@@ -42,13 +40,12 @@
               </ul>
           </nav>
         </header>
-          <main class="main-inner">
+          <main class="main-inner main-container">
               <div class="wrapper-background">
-                <div class="header-container-center">
                   <header class="inner-header">
                     <h1>Гостиницы Седоны</h1>
                     <ul class="breadcrumbs-list">
-                        <li class="breadcrumbs-item">
+                        <li class="breadcrumbs-item breadcrumbs-item-home">
                             <a href="index.html" class="breadcrumbs-link">
                                 <span class="visually-hidden">Главная</span>
                             </a>
@@ -61,81 +58,87 @@
                 <section class="hotels-filter">
                     <h2 class="visually-hidden">Список гостиниц с фильтрами</h2>
                     <form action="#" class="hotels-filter-form" method="get">
+                      <div class="form-pool">
                         <fieldset class="hotels-filter-group">
-                            <legend class="control">Инфраструктура:</legend>
-                            <label class="filter-label" for="hotels-pool">
-                                <input id="hotels-pool" class="control-input" type="checkbox" name="hotels-pool"
-                                    checked>
-                                Бассейн
-                            </label>
-                            <label class="filter-label" for="hotels-parking">
-                                <input id="hotels-parking" class="control-input" type="checkbox" name="hotels-parking"
-                                    checked>
-                                Парковка
-                            </label>
-                            <label class="filter-label" for="wifi">
-                                <input id="wifi" class="control-input" type="checkbox" name="hotels-wifi">
-                                Wi-Fi
-                            </label>
-                        </fieldset>
+                          <legend class="control">Инфраструктура:</legend>
+                          <label class="filter-label" for="hotels-pool">
+                              <input id="hotels-pool" class="control-input" type="checkbox" name="hotels-pool"
+                                  checked>
+                              Бассейн
+                          </label>
+                          <label class="filter-label" for="hotels-parking">
+                              <input id="hotels-parking" class="control-input" type="checkbox" name="hotels-parking"
+                                  checked>
+                              Парковка
+                          </label>
+                          <label class="filter-label" for="wifi">
+                              <input id="wifi" class="control-input" type="checkbox" name="hotels-wifi">
+                              Wi-Fi
+                          </label>
+                      </fieldset>
+                      </div>
+                      <div class="form-housing">
                         <fieldset class="hotels-filter-group">
-                            <legend class="control">Тип Жилья:</legend>
-                            <label class="filter-label">
-                                <input class="control-input" type="radio" name="housing-type" checked>
-                                Гостиница
-                            </label>
-                            <label class="filter-label">
-                                <input class="control-input" type="radio" name="housing-type">
-                                Мотель
-                            </label>
-                            <label class="filter-label">
-                                <input class="control-input" type="radio" name="housing-type">
-                                Апартаменты
-                            </label>
-                        </fieldset>
+                          <legend class="control">Тип Жилья:</legend>
+                          <label class="filter-label">
+                              <input class="control-input" type="radio" name="housing-type" checked>
+                              Гостиница
+                          </label>
+                          <label class="filter-label">
+                              <input class="control-input" type="radio" name="housing-type">
+                              Мотель
+                          </label>
+                          <label class="filter-label">
+                              <input class="control-input" type="radio" name="housing-type">
+                              Апартаменты
+                          </label>
+                      </fieldset>
+                      </div>
+                      <div class="form-costs">
                         <fieldset class="hotels-filter-group">
-                            <legend class="control">Стоимость, ₽:</legend>
-                            <label class="costs-label" for="input-from">
-                                От
-                                <input id="input-from" class="text-input" type="number" name="costs-from" value="0">
-                            </label>
-                            <label class="costs-label" for="input-to">
-                                До
-                                <input id="input-to" class="text-input" type="number" name="costs-to" value="9000">
-                            </label>
-                            <input type="range" name="costs-range">
-                            <button class="button button-blue" type="submit">Применить</button>
-                            <button class="button" type="reset">Сбросить</button>
-                        </fieldset>
+                          <legend class="control">Стоимость, ₽:</legend>
+                          <label class="costs-label" for="input-from">
+                              От
+                              <input id="input-from" class="text-input" type="number" name="costs-from" value="0">
+                          </label>
+                          <label class="costs-label" for="input-to">
+                              До
+                              <input id="input-to" class="text-input" type="number" name="costs-to" value="9000">
+                          </label>
+                          <input type="range" name="costs-range">
+                      </fieldset>
+                      </div>
+                        <button class="button button-blue" type="submit">Применить</button>
+                        <button class="button" type="reset">Сбросить</button>
                     </form>
                 </section>
-                </div>
               </div>
               <section class="hotels">
-                <div class="hotels-container-center">
+                <div class="hotels-controls-wrap">
                   <h2>Найдено гостиниц: <span class="number-hotels">38</span></h2>
                   <select class="select-control" aria-label="Сортировка">
                       <option class="select-control-option" value="cheap">Сначала дешевые</option>
                       <option class="select-control-option" value="popular">Сначала популярные</option>
                       <option class="select-control-option" value="expensive">Сначала дорогие</option>
                   </select>
-                  <ul class="view-buttons">
-                      <li class="view-buttons-list">
-                          <a class="view-button-grid view-button-selected">
+                  <ul class="view-buttons-list">
+                      <li class="view-buttons-item">
+                          <a class="view-button view-button-grid view-button-selected">
                               <span class="visually-hidden">Вид плитка</span>
                           </a>
                       </li>
-                      <li class="view-buttons-list">
-                          <a class="view-button-card">
+                      <li class="view-buttons-item">
+                          <a class="view-button view-button-card">
                               <span class="visually-hidden">Вид карточка</span>
                           </a>
                       </li>
-                      <li class="view-buttons-list">
-                          <a class="view-button-list">
+                      <li class="view-buttons-item">
+                          <a class="view-button view-button-list">
                               <span class="visually-hidden">Вид список</span>
                           </a>
                       </li>
                   </ul>
+                </div>
                   <ul class="hotels-list">
                       <li class="hotels-item">
                           <a class="hotel-title" href="#" aria-label="Гостиница Amara Resort & Spa">
@@ -226,7 +229,6 @@
                           <a href="#" class="pagination-link">10</a>
                       </li>
                   </ul>
-                </div>
               </section>
               <section class="subscribe-hotels">
                   <h2>Подпишитесь на рассылку</h2>
@@ -240,37 +242,35 @@
               </section>
           </main>
           <footer class="page-footer">
-            <div class="footer-wrapper">
-              <section class="socials">
-                <h2 class="visually-hidden" hidden>Список социальных сетей</h2>
-                <ul class="social-list">
-                  <li class="social-item">
-                    <a href="https://vk.com/htmlacademy">
-                      <span class="visually-hidden">Вконтакте</span>
-                    </a>
-                  </li>
-                  <li class="social-item">
-                    <a href="https://t.me/htmlacademy">
-                      <span class="visually-hidden">Телеграм</span>
-                    </a>
-                  </li>
-                  <li class="social-item">
-                    <a href="https://www.youtube.com/user/htmlacademyru">
-                      <span class="visually-hidden">Ютуб</span>
-                    </a>
-                  </li>
-                </ul>
-              </section>
-              <section class="phone">
-                <a href="tel:+78128121212" class="phone-link" aria-label="Номер телефона для связи">+7 (812) 812-12-12</a>
-              </section>
-              <section class="academy-logo">
-                <a href="https://htmlacademy.ru/" class="academy-link">
-                  <img class="academy-logo" src="images/html-academy.svg" width="115" height="33" alt="Логотип Html academy">
-                </a>
-              </section>
-            </div>
-          </footer>
+            <section class="socials">
+              <!-- <h2 class="visually-hidden" hidden>Список социальных сетей</h2> -->
+              <ul class="social-list">
+                <li class="social-item social-item-vk">
+                  <a href="https://vk.com/htmlacademy">
+                    <span class="visually-hidden">Вконтакте</span>
+                  </a>
+                </li>
+                <li class="social-item social-item-telegram">
+                  <a href="https://t.me/htmlacademy">
+                    <span class="visually-hidden">Телеграм</span>
+                  </a>
+                </li>
+                <li class="social-item social-item-youtube">
+                  <a href="https://www.youtube.com/user/htmlacademyru">
+                    <span class="visually-hidden">Ютуб</span>
+                  </a>
+                </li>
+              </ul>
+            </section>
+            <section class="phone">
+              <a href="tel:+78128121212" class="phone-link" aria-label="Номер телефона для связи">+7 (812) 812-12-12</a>
+            </section>
+            <section class="academy-logo">
+              <a href="https://htmlacademy.ru/" class="academy-link">
+                <img class="academy-logo-image" src="images/html-academy.svg" width="115" height="33" alt="Логотип Html academy">
+              </a>
+            </section>
+        </footer>
       </div>
     </body>
 
