--- a/index.html
+++ b/index.html
@@ -12,8 +12,8 @@
     <div class="page-wrapper">
       <header class="page-header">
         <nav class="navigation">
-          <a class="page-header-logo" href="index.html" aria-current="page">
-            <img src="images/header/logo.svg" alt="Седона - городок в Аризоне" width="140" height="70">
+          <a class="header-logo-link" href="index.html" aria-current="page">
+            <img class="header-logo" src="images/header/logo.svg" alt="Седона - городок в Аризоне" width="140" height="70">
           </a>
             <ul class="navigation-main navigation-menu">
               <li class="navigation-main-item">
@@ -29,9 +29,7 @@
             </ul>
             <ul class="navigation-main navigation-user">
               <li class="navigation-user-item">
-                <button class="button-search" type="button">
-                  <span class="visually-hidden">Поиск по сайту</span>
-                </button>
+                <button class="button-search" type="button">Поиск по сайту</button>
               </li>
               <li class="navigation-user-item">
                 <button class="button-favorite" type="button">Избранное</button>
@@ -42,38 +40,42 @@
             </ul>
         </nav>
       </header>
-      <main class=" main-container main-index">
+      <main class="main-container main-index">
         <section class="hero">
-          <h1 class="visually-hidden" hidden>Седона - городок в Аризоне</h1>
+          <h1 class="visually-hidden">Седона - городок в Аризоне</h1>
           <img class="hero-image-main" src="images/welcome-sedona.svg" width="458" height="352"
             alt="Добро пожаловать в великолепную Седону">
         </section>
         <section class="gallery">
           <h2 class="visually-hidden">Галлерея</h2>
-          <p class="gallery-title">Седона — небольшой городок в Аризоне, заслуживающий большего!</p>
+          <p class="gallery-title">Седона — небольшой городок в Аризоне,<br> заслуживающий большего!</p>
           <p class="gallery-subscription">Рассмотрим причины, по которым Седона круче, чем Гранд-Каньон!</p>
           <ul class="gallery-list">
-            <li class="gallery-item">
+            <li class="gallery-item gallery-item-picture">
+              <div class="gallery-item-wrap">
               <h3>Настоящий городок</h3>
               <p>Седона — не аттракцион для туристов, там течёт своя жизнь</p>
+              </div>
               <img src="images/gallery-1.jpg" width="800" height="385" alt="Седона - настоящий город">
             </li>
-            <li class="gallery-item">
+            <li class="gallery-item gallery-item-light">
               <h3>Небольшая площадь</h3>
               <p>Все достопримечательности находятся очень близко</p>
             </li>
-            <li class="gallery-item">
+            <li class="gallery-item gallery-item-middle">
               <h3>Красивая дорога</h3>
               <p>Ехать в Седону из Лас-Вегаса совсем не скучно!</p>
             </li>
-            <li class="gallery-item">
+            <li class="gallery-item gallery-item-light">
               <h3>Мало туристов</h3>
               <p>Большинство едет в Гранд Каньон и толпится там</p>
             </li>
-            <li class="gallery-item">
-              <h3>Там есть мост дьявола</h3>
-              <p>Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
+            <li class="gallery-item gallery-item-picture">
               <img src="images/gallery-2.jpg" width="800" height="385" alt="Седона: мост дьявола">
+              <div class="gallery-item-wrap">
+                <h3>Там есть мост дьявола</h3>
+              <p>Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
+              </div>
             </li>
           </ul>
         </section>
@@ -81,7 +83,7 @@
           <h2>Приезжайте в Седону отдохнуть в комфорте и уюте!</h2>
           <p class="advantages-subscription">Опытный персонал и качественное обслуживание!</p>
           <ul class="advantages-list">
-            <li class="advantages-item">
+            <li class="advantages-item advantages-item-dark">
               <h3>Жильё</h3>
               <p>Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
             </li>
@@ -89,7 +91,7 @@
               <h3>Еда</h3>
               <p>Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
             </li>
-            <li class="advantages-item">
+            <li class="advantages-item advantages-item-dark">
               <h3>Сувениры</h3>
               <p>Не только китайского, но и настоящего местного производства!</p>
             </li>
@@ -113,21 +115,20 @@
         </section>
       </main>
       <footer class="page-footer">
-        <div class="footer-wrapper">
           <section class="socials">
-            <h2 class="visually-hidden" hidden>Список социальных сетей</h2>
+            <!-- <h2 class="visually-hidden" hidden>Список социальных сетей</h2> -->
             <ul class="social-list">
-              <li class="social-item">
+              <li class="social-item social-item-vk">
                 <a href="https://vk.com/htmlacademy">
                   <span class="visually-hidden">Вконтакте</span>
                 </a>
               </li>
-              <li class="social-item">
+              <li class="social-item social-item-telegram">
                 <a href="https://t.me/htmlacademy">
                   <span class="visually-hidden">Телеграм</span>
                 </a>
               </li>
-              <li class="social-item">
+              <li class="social-item social-item-youtube">
                 <a href="https://www.youtube.com/user/htmlacademyru">
                   <span class="visually-hidden">Ютуб</span>
                 </a>
@@ -139,12 +140,10 @@
           </section>
           <section class="academy-logo">
             <a href="https://htmlacademy.ru/" class="academy-link">
-              <img class="academy-logo" src="images/html-academy.svg" width="115" height="33" alt="Логотип Html academy">
+              <img class="academy-logo-image" src="images/html-academy.svg" width="115" height="33" alt="Логотип Html academy">
             </a>
           </section>
-        </div>
       </footer>
     </div>
   </body>
 </html>
-
