--- a/index.html
+++ b/index.html
@@ -13,31 +13,36 @@
       <header class="page-header">
         <nav class="navigation">
           <a class="header-logo-link" href="index.html" aria-current="page">
-            <img class="header-logo" src="images/header/logo.svg" alt="Седона - городок в Аризоне" width="140" height="70">
+            <img class="header-logo" src="images/header/logo.svg" alt="Седона - городок в Аризоне" width="140"
+              height="70">
           </a>
-            <ul class="navigation-main navigation-menu">
-              <li class="navigation-main-item">
-                <a href="index.html" class="navigation-main-link navigation-main-link-current"
-                  aria-current="page">Главная</a>
-              </li>
-              <li class="navigation-main-item">
-                <a href="#" class="navigation-main-link">О Седоне</a>
-              </li>
-              <li class="navigation-main-item">
-                <a href="hotels.html" class="navigation-main-link">Гостиницы</a>
-              </li>
-            </ul>
-            <ul class="navigation-main navigation-user">
-              <li class="navigation-user-item">
-                <button class="button-search" type="button">Поиск по сайту</button>
-              </li>
-              <li class="navigation-user-item">
-                <button class="button-favorite" type="button">Избранное</button>
-              </li>
-              <li class="navigation-user-item">
-                <a class="want-here" href="#">Хочу сюда!</a>
-              </li>
-            </ul>
+          <ul class="navigation-main navigation-menu">
+            <li class="navigation-main-item">
+              <a href="index.html" class="navigation-main-link navigation-main-link-current"
+                aria-current="page">Главная</a>
+            </li>
+            <li class="navigation-main-item">
+              <a href="#" class="navigation-main-link">О Седоне</a>
+            </li>
+            <li class="navigation-main-item">
+              <a href="hotels.html" class="navigation-main-link">Гостиницы</a>
+            </li>
+          </ul>
+          <ul class="navigation-main navigation-user">
+            <li class="navigation-user-item">
+              <button class="button-search" type="button">
+                <span class="visually-hidden">Поиск</span>
+              </button>
+            </li>
+            <li class="navigation-user-item">
+              <button class="button-favorite" type="button">
+                <span class="visually-hidden">Избранное</span>
+              </button>
+            </li>
+            <li class="navigation-user-item">
+              <a class="want-here" href="#">Хочу сюда!</a>
+            </li>
+          </ul>
         </nav>
       </header>
       <main class="main-container main-index">
@@ -53,8 +58,8 @@
           <ul class="gallery-list">
             <li class="gallery-item gallery-item-picture">
               <div class="gallery-item-wrap">
-              <h3>Настоящий городок</h3>
-              <p>Седона — не аттракцион для туристов, там течёт своя жизнь</p>
+                <h3>Настоящий городок</h3>
+                <p>Седона — не аттракцион для туристов, там течёт своя жизнь</p>
               </div>
               <img src="images/gallery-1.jpg" width="800" height="385" alt="Седона - настоящий город">
             </li>
@@ -74,7 +79,7 @@
               <img src="images/gallery-2.jpg" width="800" height="385" alt="Седона: мост дьявола">
               <div class="gallery-item-wrap">
                 <h3>Там есть мост дьявола</h3>
-              <p>Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
+                <p>Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
               </div>
             </li>
           </ul>
@@ -115,35 +120,37 @@
         </section>
       </main>
       <footer class="page-footer">
-          <section class="socials">
-            <!-- <h2 class="visually-hidden" hidden>Список социальных сетей</h2> -->
-            <ul class="social-list">
-              <li class="social-item social-item-vk">
-                <a href="https://vk.com/htmlacademy">
-                  <span class="visually-hidden">Вконтакте</span>
-                </a>
-              </li>
-              <li class="social-item social-item-telegram">
-                <a href="https://t.me/htmlacademy">
-                  <span class="visually-hidden">Телеграм</span>
-                </a>
-              </li>
-              <li class="social-item social-item-youtube">
-                <a href="https://www.youtube.com/user/htmlacademyru">
-                  <span class="visually-hidden">Ютуб</span>
-                </a>
-              </li>
-            </ul>
-          </section>
-          <section class="phone">
-            <a href="tel:+78128121212" class="phone-link" aria-label="Номер телефона для связи">+7 (812) 812-12-12</a>
-          </section>
-          <section class="academy-logo">
-            <a href="https://htmlacademy.ru/" class="academy-link">
-              <img class="academy-logo-image" src="images/html-academy.svg" width="115" height="33" alt="Логотип Html academy">
-            </a>
-          </section>
+        <section class="socials">
+          <h2 class="visually-hidden" hidden>Список социальных сетей</h2>
+          <ul class="social-list">
+            <li>
+              <a class="social-link social-link-vk" href="https://vk.com/htmlacademy">
+                <span class="visually-hidden">Вконтакте</span>
+              </a>
+            </li>
+            <li>
+              <a class="social-link social-link-telegram" href="https://t.me/htmlacademy">
+                <span class="visually-hidden">Телеграм</span>
+              </a>
+            </li>
+            <li>
+              <a class="social-link social-link-youtube" href="https://www.youtube.com/user/htmlacademyru">
+                <span class="visually-hidden">Ютуб</span>
+              </a>
+            </li>
+          </ul>
+        </section>
+        <section class="phone">
+          <a href="tel:+78128121212" class="phone-link" aria-label="Номер телефона для связи">+7 (812) 812-12-12</a>
+        </section>
+        <section class="academy-logo">
+          <a href="https://htmlacademy.ru/" class="academy-link">
+            <img class="academy-logo-image" src="images/html-academy.svg" width="115" height="33"
+              alt="Логотип Html academy">
+          </a>
+        </section>
       </footer>
     </div>
   </body>
+
 </html>
