Добавляет раскладку на гридах

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
   <body>
     <div class="page-wrapper">
-      <header class="page-header">
+      <header class="page-header container">
         <a class="header-logo-link" href="index.html" aria-current="page">
           <img class="header-logo" src="images/header/logo.svg" alt="Седона - городок в Аризоне" width="140"
             height="70">
@@ -82,7 +82,7 @@
                 <img src="images/gallery-2.jpg" width="800" height="385" alt="Седона: мост дьявола">
               </div>
               <div class="gallery-item-wrap">
-                <h3>Там есть мост дьявола</h3>
+                <h3>Там есть<br>мост дьявола</h3>
                 <p>Да, по нему можно пройти! Если вы осмелитесь, разумеется</p>
               </div>
             </li>
@@ -94,28 +94,30 @@
           <ul class="advantages-list">
             <li class="advantages-item advantages-item-dark advantages-item-housing">
               <h3>Жильё</h3>
-              <p>Рекомендуем пожить в настоящем мотеле, всё как в кино!</p>
+              <p>Рекомендуем пожить<br>в настоящем мотеле,<br>всё как в кино!</p>
             </li>
             <li class="advantages-item advantages-item-food">
               <h3>Еда</h3>
-              <p>Всегда заказывайте топовый фирменный бургер, вы не разочаруетесь!</p>
+              <p>Всегда заказывайте<br>топовый фирменный бургер,<br>вы не разочаруетесь!</p>
             </li>
             <li class="advantages-item advantages-item-dark advantages-item-souvenir">
               <h3>Сувениры</h3>
-              <p>Не только китайского, но и настоящего местного производства!</p>
+              <p>Не только китайского,<br>но и настоящего местного<br>производства!</p>
             </li>
           </ul>
         </section>
         <section class="appointment">
           <h2 class="visually-hidden">Поиск гостиницы</h2>
           <p class="appointment-title">Заинтересовались?</p>
-          <p class="appointment-subscription">Укажите предполагаемые даты поездки,<br>и мы покажем вам лучшие предложения
+          <p class="appointment-subscription">Укажите предполагаемые даты поездки,<br>и мы покажем вам лучшие
+            предложения
             гостиниц в Седоне</p>
           <a href="hotels.html">Поиск гостиницы в Седоне</a>
         </section>
         <section class="subscribe-index">
           <h2>Подпишитесь на рассылку</h2>
-          <p class="subscribe-index-subscription">Только полезная информация и никакого спама, честное бойскаутское!</p>
+          <p class="subscribe-index-subscription">Только полезная информация и никакого спама,<br>честное бойскаутское!
+          </p>
           <form action="https://echo.htmlacademy.ru/" class="subscribe-table" method="post">
             <label class="visually-hidden" for="e-mail">Укажите ваш e-mail</label>
             <input class="input-subscribe" id="e-mail" type="email" name="email" placeholder="Ваш e-mail">
@@ -123,7 +125,7 @@
           </form>
         </section>
       </main>
-      <footer class="page-footer">
+      <footer class="page-footer container">
         <section class="socials">
           <h2 class="visually-hidden" hidden>Список социальных сетей</h2>
           <ul class="social-list">
