--- a/hotels.html
+++ b/hotels.html
@@ -10,7 +10,7 @@
 
   <body>
     <div class="page-wrapper">
-      <header class="page-header">
+      <header class="page-header container">
         <a class="header-logo-link" href="index.html" aria-current="page">
           <img class="header-logo" src="images/header/logo.svg" alt="Седона - городок в Аризоне" width="140"
             height="70">
@@ -46,7 +46,7 @@
         </nav>
       </header>
       <main class="main-inner main-container">
-        <div class="wrapper-background">
+        <div class="wrapper-background container">
           <header class="inner-header">
             <h1>Гостиницы Седоны</h1>
             <ul class="breadcrumbs-list">
@@ -105,7 +105,7 @@
             </form>
           </section>
         </div>
-        <section class="hotels">
+        <section class="hotels container">
           <div class="hotels-controls-wrap">
             <h2>Найдено гостиниц: <span class="number-hotels">38</span></h2>
             <select class="select-control" aria-label="Сортировка">
@@ -140,20 +140,14 @@
                 <img src="images/hotels/amara-resort-spa.jpg" width="300" height="212"
                   alt="Гостиница Amara Resort & Spa">
               </a>
-              <div class="hotel-cost-wrap">
-                <span>Гостиница</span>
-                <b class="hotel-costs">От 4000 ₽</b>
+              <span>Гостиница</span>
+              <b class="hotel-costs">От 4000 ₽</b>
+              <a class="hotels-more" href="#">Подробнее</a>
+              <button class="button button-blue button-to-favorites" type="button">В избранное</button>
+              <div class="stars four-stars">
+                <span class="visually-hidden">4 звезды</span>
               </div>
-              <div class="hotel-buttons-wrap">
-                <a class="hotels-more" href="#">Подробнее</a>
-                <button class="button button-blue button-to-favorites" type="button">В избранное</button>
-              </div>
-              <div class="hotel-rating-wrap">
-                <div class="stars four-stars">
-                  <span class="visually-hidden">4 звезды</span>
-                </div>
-                <p class="hotel-rating">Рейтинг: <span>8,5</span></p>
-              </div>
+              <p class="hotel-rating">Рейтинг: <span>8,5</span></p>
             </li>
             <li class="hotels-item">
               <a class="hotel-title" href="#" aria-label="Гостиница Villas at Poco Diablo">
@@ -163,20 +157,14 @@
                 <img src="images/hotels/villasat-poco-diablo.jpg" width="300" height="212"
                   alt="Гостиница Villas at Poco Diablo">
               </a>
-              <div class="hotel-cost-wrap">
-                <span>Гостиница</span>
-                <b class="hotel-costs">От 5000 ₽</b>
+              <span>Гостиница</span>
+              <b class="hotel-costs">От 5000 ₽</b>
+              <a class="hotels-more" href="#">Подробнее</a>
+              <button class="button button-in-favorites" type="button">В избранном</button>
+              <div class="stars four-stars">
+                <span class="visually-hidden">4 звезды</span>
               </div>
-              <div class="hotel-buttons-wrap">
-                <a class="hotels-more" href="#">Подробнее</a>
-                <button class="button button-in-favorites" type="button">В избранном</button>
-              </div>
-              <div class="hotel-rating-wrap">
-                <div class="stars four-stars">
-                  <span class="visually-hidden">4 звезды</span>
-                </div>
-                <p class="hotel-rating">Рейтинг: <span>9,2</span></p>
-              </div>
+              <p class="hotel-rating">Рейтинг: <span>9,2</span></p>
             </li>
             <li class="hotels-item">
               <a class="hotel-title" href="#" aria-label="Гостиница Villas at Poco Diablo">
@@ -186,20 +174,14 @@
                 <img src="images/hotels/desert-quail-inn.jpg" width="300" height="212"
                   alt="Гостиница Villas at Poco Diablo">
               </a>
-              <div class="hotel-cost-wrap">
-                <span>Гостиница</span>
-                <b class="hotel-costs">От 2500 ₽</b>
+              <span>Гостиница</span>
+              <b class="hotel-costs">От 2500 ₽</b>
+              <a class="hotels-more" href="#">Подробнее</a>
+              <button class="button button-blue button-to-favorites" type="button">В избранное</button>
+              <div class="stars three-stars">
+                <span class="visually-hidden">3 звезды</span>
               </div>
-              <div class="hotel-buttons-wrap">
-                <a class="hotels-more" href="#">Подробнее</a>
-                <button class="button button-blue button-to-favorites" type="button">В избранное</button>
-              </div>
-              <div class="hotel-rating-wrap">
-                <div class="stars three-stars">
-                  <span class="visually-hidden">3 звезды</span>
-                </div>
-                <p class="hotel-rating">Рейтинг: <span>6,9</span></p>
-              </div>
+              <p class="hotel-rating">Рейтинг: <span>6,9</span></p>
             </li>
             <li class="hotels-item">
               <a class="hotel-title" href="#">
@@ -208,20 +190,14 @@
               <a class="hotel-image-link" href="#" tabindex="-1">
                 <img src="images/hotels/green-tree-inn.jpg" width="300" height="212" alt="Гостиница GreenTree Inn">
               </a>
-              <div class="hotel-cost-wrap">
-                <span>Гостиница</span>
-                <b class="hotel-costs">От 1500 ₽</b>
+              <span>Гостиница</span>
+              <b class="hotel-costs">От 1500 ₽</b>
+              <a class="hotels-more" href="#">Подробнее</a>
+              <button class="button button-blue button-to-favorites" type="button">В избранное</button>
+              <div class="stars two-stars">
+                <span class="visually-hidden">2 звезды</span>
               </div>
-              <div class="hotel-buttons-wrap">
-                <a class="hotels-more" href="#">Подробнее</a>
-                <button class="button button-blue button-to-favorites" type="button">В избранное</button>
-              </div>
-              <div class="hotel-rating-wrap">
-                <div class="stars two-stars">
-                  <span class="visually-hidden">2 звезды</span>
-                </div>
-                <p class="hotel-rating">Рейтинг: <span>5,0</span></p>
-              </div>
+              <p class="hotel-rating">Рейтинг: <span>5,0</span></p>
             </li>
           </ul>
           <ul class="pagination">
@@ -256,7 +232,7 @@
           </form>
         </section>
       </main>
-      <footer class="page-footer">
+      <footer class="page-footer container">
         <section class="socials">
           <h2 class="visually-hidden" hidden>Список социальных сетей</h2>
           <ul class="social-list">
